# docs/swagger.json
@@ -305,7 +305,7 @@
             }
         },
         "/deletePost": {
-            "get": {
+            "delete": {
                 "security": [
                     {
                         "CookieAuth": []
@@ -326,10 +326,10 @@
                     }
                 ],
                 "responses": {
-                    "302": {
-                        "description": "Redirect to /",
+                    "200": {
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/echohub-community_internal_models.Response"
                         }
                     },
                     "400": {
